# agent-monte-carlo

./: .gitignore  .pre-commit-config.yaml  BUILD_LOG.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  Dockerfile  FAST.md  FINAL_COMPLETION.md  FINAL_SUMMARY.md  GITHUB_PUSH_INSTRUCTIONS.md  HISTORICAL_TASKS_RECOVERY.md  LICENSE  PROGRESS_REPORT.md  PROJECT_AUDIT_REPORT.md  PROJECT_COMPLETE.md  PUSH_TO_GITHUB.md  QUALITY_IMPROVEMENT_SUMMARY.md  README.md  README_zh.md  REPLICATION.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  CRITICAL_REVIEW.md  DATA_SOURCES.md  DEVELOPMENT_PLAN.md  ENGINEERING_ECONOMICS_REVIEW.md  FINAL_STRICT_REVIEW.md  GITHUB_IMAGE_REFERENCE_CHECK.md  LITERATURE_REVIEW.md  LOGIC_STRESS_TEST.md  NEXT_STEPS.md  PARAMETER_HANDBOOK.md  PROFESSIONAL_FIXES.md  PROJECT_ANALYSIS.md  SECURITY_AUDIT.md  STREAMLIT_DEPLOYMENT.md  THEORETICAL_FRAMEWORK.md  THEORY_COMPLETION_SUMMARY.md  THEORY_FOUNDATION.md  THEORY_REPAIRS.md  VALIDATION_STANDARDS.md
paper/: cover_letter.tex  references.bib
paper/sections/: 01_introduction.tex  02_model.tex  03_data_calibration.tex  04_results.tex  05_robustness.tex  06_policy.tex  07_conclusion.tex
results/examples/: README_RESULTS.md  simulation_results.json
scripts/: bootstrap_se.py  comparative_statics.py  convergence_rate.py  empirical_calibration.py  generate_charts.py  generate_paper_figures.py  generate_professional_charts.py  generate_results.py  international_validation.py  model_comparison.py  replicate_all.py  verify_equilibrium.py  welfare_analysis.py  welfare_sensitivity.py
src/agent_mc/: __init__.py  cli.py  config.py  data.py  interfaces.py  simulator.py  types.py  validation.py
src/agent_mc/agents/: __init__.py  base.py
src/agent_mc/orders/: base.py
src/agent_mc/utils/: errors.py  memory.py
tests/: __init__.py  test_config.py  test_simulator.py  test_types.py
