[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agent-monte-carlo"
version = "0.5.0"
description = "Enterprise-grade agent-based Monte Carlo simulation framework for quantitative finance"
authors = ["Agent Monte Carlo Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/agent-monte-carlo/agent-monte-carlo"
repository = "https://github.com/agent-monte-carlo/agent-monte-carlo"
documentation = "https://agent-monte-carlo.readthedocs.io"
keywords = [
    "monte-carlo",
    "agent-based-modeling",
    "quantitative-finance",
    "risk-analysis",
    "portfolio-optimization",
    "financial-simulation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
scipy = "^1.11.0"
numba = "^0.58.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.0"
mypy = "^1.6.0"
ruff = "^0.1.0"
black = "^23.10.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
agent-mc = "agent_mc.cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/agent-monte-carlo/agent-monte-carlo/issues"
"Source" = "https://github.com/agent-monte-carlo/agent-monte-carlo"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "ARG"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["agent_mc"]
skip = ["__init__.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=agent_mc --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
branch = true
source = ["agent_mc"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"
